--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (C) 2015, Max Hohenegger <eclipse@hohenegger.eu>
+# Copyright (C) 2015, Max Hohenegger <eclipse@hohenegger.eu> and others.
 #
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
@@ -68,4 +68,4 @@ FinishFeatureDialog_setParameterForFinishing=Set options for finishing {0}.
 ReleaseFinishOperation_unexpectedConflictsReleaseAborted=Unexpected conflicts while merging to {0}. Finish release aborted.
 HotfixFinishOperation_unexpectedConflictsHotfixAborted=Unexpected conflicts while merging to {0}. Finish hotfix aborted.
 UIIcons_errorDeterminingIconBase=Can't determine icon base.
-UIIcons_errorLoadingPluginImage=Can't load plugin image ''{0}''.
+UIIcons_errorLoadingPluginImage=Can''t load plugin image ''{0}''.
