--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -33,6 +33,15 @@ HotfixFinishHandler_hotfixFinishConflicts=Finishing hotfix resulted in conflicts
 HotfixStartHandler_pleaseProvideANameForTheNewHotfix=Please provide a name for the new hotfix.
 HotfixStartHandler_provideHotfixName=Provide hotfix name
 HotfixStartHandler_startingNewHotfix=Starting new Hotfix...
+InitDialog_chooseBranchNamesAndPrefixes=Choose branch names and prefixes for your Gitflow repository.
+InitDialog_developBranch=Develop branch
+InitDialog_featureBranchPrefix=Feature branch prefix
+InitDialog_hotfixBranchPrefix=Hotfix branch prefix
+InitDialog_invalidBranchName=Invalid branch name: ''{0}''
+InitDialog_invalidPrefix=Invalid prefix: ''{0}''
+InitDialog_masterBranch=Master branch
+InitDialog_releaseBranchPrefix=Release branch prefix
+InitDialog_versionTagPrefix=Version tag prefix
 InitHandler_initializing=Initializing...
 ReleaseFinishHandler_Conflicts=Conflicts
 ReleaseFinishHandler_finishingRelease=Finishing release...
