--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -27,6 +27,7 @@ FeatureTrackHandler_noRemoteFeaturesFoundOnTheConfiguredRemote=No features were 
 FeatureTrackHandler_remoteFeatures=Remote features:
 FeatureTrackHandler_selectFeature=Select Feature
 FeatureTrackHandler_trackingFeature=Tracking feature...
+Handlers_noGitflowRepositoryFound=No Gitflow repository found.
 HotfixFinishHandler_Conflicts=Conflicts
 HotfixFinishHandler_finishingHotfix=Finishing hotfix...
 HotfixFinishHandler_hotfixFinishConflicts=Finishing hotfix resulted in conflicts.
