--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -813,6 +813,12 @@ CommitDialog_OpenStagingViewToolTip=For comparing and committing while still bei
 CommitDialog_Path=Path
 CommitDialog_Title=Commit Changes to Git Repository
 CommitDialog_WrongTypeOfCommitMessageProvider=The extension used as CommitMessageProvider has the wrong type (it must implement org.eclipse.egit.ui.ICommitMessageProvider)
+CommitWarningDialogTitle=Warning
+CommitWarningDialogDescription=There're problems in file(s) you're trying to commit
+CommitWarningDialogWarnings=There are warnings in {0} file(s). Do you still want to commit those file(s)?
+CommitWarningDialogErrors=There are errors in {0} file(s). Do you still want to commit those file(s)?
+CommitWarningDialogWarningsErrors=There are warnings in {0} file(s) and errors in {1} file(s). Do you still want to commit those file(s)?
+CommitWarningDialogProblemsViewLink=You can review errors and warnings in <a>Problems view</a>
 
 SpellcheckableMessageArea_redo=Redo
 SpellcheckableMessageArea_showWhitespace=Show &Whitespace Characters
