--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -813,6 +813,15 @@ CommitDialog_OpenStagingViewToolTip=For comparing and committing while still bei
 CommitDialog_Path=Path
 CommitDialog_Title=Commit Changes to Git Repository
 CommitDialog_WrongTypeOfCommitMessageProvider=The extension used as CommitMessageProvider has the wrong type (it must implement org.eclipse.egit.ui.ICommitMessageProvider)
+CommitWarningDialog_Title=Warning
+CommitWarningDialog_Description=There are problems in file(s) you're trying to commit
+CommitWarningDialog_Warnings=There are warnings in {0} file(s). Do you still want to commit those file(s)?
+CommitWarningDialog_WarningsLabel=Warnings
+CommitWarningDialog_Errors=There are errors in {0} file(s). Do you still want to commit those file(s)?
+CommitWarningDialog_ErrorsLabel=Errors
+CommitWarningDialog_WarningsErrors=There are warnings in {0} file(s) and errors in {1} file(s). Do you still want to commit those file(s)?
+CommitWarningDialog_ProblemsViewLink=You can review errors and warnings in <a>Problems view</a>
+CommitWarningDialog_ProblemsViewError=Error when opening Problems view
 
 SpellcheckableMessageArea_redo=Redo
 SpellcheckableMessageArea_showWhitespace=Show &Whitespace Characters
@@ -1233,6 +1242,7 @@ DialogsPreferencePage_RunningLaunchOnCheckout=Warn about running launches when s
 DialogsPreferencePage_ShowInitialConfigCheckbox=&Initial configuration
 DialogsPreferencePage_ShowCheckoutConfirmation=Checkout confirmation
 DialogsPreferencePage_ShowCloneFailedDialog=Clone failed error
+DialogsPreferencePage_CheckBeforeCommitting=Check for warnings and errors before committing
 DiffEditorPage_TaskGeneratingDiff=Generating diff
 DiffEditorPage_TaskUpdatingViewer=Updating diff viewer
 DiffEditorPage_Title=Diff
