--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -812,6 +812,7 @@ CommitDialog_OpenStagingViewLink=Open <a>Git Staging</a> view
 CommitDialog_OpenStagingViewToolTip=For comparing and committing while still being able to navigate and use the editor, try the Git Staging view by clicking the link. The view will be opened with your repository and commit message.
 CommitDialog_Path=Path
 CommitDialog_Title=Commit Changes to Git Repository
+CommitDialog_IgnoreErrors=Ignore warnings and errors
 CommitDialog_WrongTypeOfCommitMessageProvider=The extension used as CommitMessageProvider has the wrong type (it must implement org.eclipse.egit.ui.ICommitMessageProvider)
 
 SpellcheckableMessageArea_redo=Redo
@@ -1233,6 +1234,7 @@ DialogsPreferencePage_RunningLaunchOnCheckout=Warn about running launches when s
 DialogsPreferencePage_ShowInitialConfigCheckbox=&Initial configuration
 DialogsPreferencePage_ShowCheckoutConfirmation=Checkout confirmation
 DialogsPreferencePage_ShowCloneFailedDialog=Clone failed error
+DialogsPreferencePage_CheckBeforeCommitting=Check for warnings and errors before committing
 DiffEditorPage_TaskGeneratingDiff=Generating diff
 DiffEditorPage_TaskUpdatingViewer=Updating diff viewer
 DiffEditorPage_Title=Diff
@@ -1789,6 +1791,7 @@ StagingView_RemoveJob=Removing files from index...
 StagingView_ResetJob=Unstaging files...
 
 StagingViewContentProvider_SubmoduleError=Unhandled exception while analyzing submodules
+StagingView_IgnoreErrors=Ignore warnings and errors
 StashApplyCommand_applyFailed=Applying stashed commit ''{0}'' failed due to ''{1}''
 StashApplyCommand_jobTitle=Apply changes from stashed commit ''{0}''
 StashCreateCommand_includeUntrackedLabel=Include untracked files
