--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -815,6 +815,8 @@ CommitDialog_OpenStagingViewLink=Open <a>Git Staging</a> view
 CommitDialog_OpenStagingViewToolTip=For comparing and committing while still being able to navigate and use the editor, try the Git Staging view by clicking the link. The view will be opened with your repository and commit message.
 CommitDialog_Path=Path
 CommitDialog_Title=Commit Changes to Git Repository
+CommitDialog_IgnoreErrors=Ignore warnings and errors
+CommitDialog_MessageErrors=Fix warnings/errors before you commit changes or explicitly ignore them
 CommitDialog_WrongTypeOfCommitMessageProvider=The extension used as CommitMessageProvider has the wrong type (it must implement org.eclipse.egit.ui.ICommitMessageProvider)
 
 SpellcheckableMessageArea_redo=Redo
@@ -1024,6 +1026,14 @@ CommittingPreferencePage_includeUntrackedFiles=Include selected untracked files
 CommittingPreferencePage_includeUntrackedFilesTooltip=Check selected untracked files by default
 CommittingPreferencePage_signedOffBy=Insert Signed-off-by
 CommittingPreferencePage_signedOffByTooltip=Insert "Signed-off-by:" footer by default
+CommittingPreferencePage_CheckBeforeCommitting=Show warning message
+CommittingPreferencePage_WarnBeforeCommitting=Warn if there are:
+CommittingPreferencePage_WarnBeforeCommittingTitle=Warnings/errors
+CommittingPreferencePage_WarnBlock_Errors=Errors
+CommittingPreferencePage_WarnBlock_WarningsAndErrors=Warnings and errors
+CommittingPreferencePage_BlockCommit=Block commit
+CommittingPreferencePage_BlockCommitTitle=Warnings/errors
+CommittingPreferencePage_BlockCommitCombo=Block if there are:
 
 BasicConfigurationDialog_ConfigLocationInfo=These settings will be stored in the Git configuration file in your home directory.
 BasicConfigurationDialog_DialogMessage=When creating a commit, Git records name and e-mail of author and committer. Please fill in the information so that your commits are correctly attributed.
@@ -1790,8 +1800,10 @@ StagingView_MergeTool=Merge Tool
 StagingView_AddJob=Adding files to index...
 StagingView_RemoveJob=Removing files from index...
 StagingView_ResetJob=Unstaging files...
+StagingView_MessageErrors=Fix warnings/errors before you commit changes or explicitly ignore them
 
 StagingViewContentProvider_SubmoduleError=Unhandled exception while analyzing submodules
+StagingView_IgnoreErrors=Ignore warnings and errors
 StashApplyCommand_applyFailed=Applying stashed commit ''{0}'' failed due to ''{1}''
 StashApplyCommand_jobTitle=Apply changes from stashed commit ''{0}''
 StashCreateCommand_includeUntrackedLabel=Include untracked files
