--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -17,7 +17,6 @@
 #    Marc Khouzam <marc.khouzam@ericsson.com> - Add option not to checkout new branch from Gerrit
 #    Mickael Istria (Red Hat Inc.)            - 463339 Simple push wizard improvements
 #    Axel Richard <axel.richard@obeo.fr>      - handle symlink decorator in staging view
-#    Christian Georgi <christian.georgi@sap.com> - Check for empty second line is configurable
 ###############################################################################
 AbortRebaseCommand_CancelDialogMessage=The abort operation was canceled
 AbortRebaseCommand_JobName=Aborting Rebase
@@ -243,6 +242,9 @@ GitPreferenceRoot_RepoChangeScannerGroupHeader=Automatic refresh
 GitPreferenceRoot_SecureStoreGroupLabel=Secure Store
 GitPreferenceRoot_SecureStoreUseByDefault=Store credentials in secure store by default
 GitPreferenceRoot_useLogicalModel=Allow models (e.g., Java, EMF) to participate in synchronizations
+GitPreferenceRoot_preferreMergeStrategy_label=You can select a specific merge strategy below\nto override the default JGit merge behavior for merge operations\n(merge, rebase, pull, revert, squash, stash, submodule update)
+GitPreferenceRoot_preferreMergeStrategy_group=Preferred merge strategy for operations that require merges
+GitPreferenceRoot_defaultMergeStrategyLabel=Default Strategy (as defined by JGit)
 GitProjectPropertyPage_LabelBranch=Branch:
 GitProjectPropertyPage_LabelGitDir=Git directory:
 GitProjectPropertyPage_LabelId=HEAD:
@@ -1017,8 +1019,6 @@ CommittingPreferencePage_title=Committing
 CommittingPreferencePage_formatting=Formatting
 CommittingPreferencePage_hardWrapMessage=Hard-wrap commit message
 CommittingPreferencePage_hardWrapMessageTooltip=Wrap text in commit message editor while typing
-CommittingPreferencePage_secondLineCheckMessage=Check for empty second line
-CommittingPreferencePage_secondLineCheckTooltip=Warn if second line is not empty in commit message
 CommittingPreferencePage_footers=Footers
 CommittingPreferencePage_includeUntrackedFiles=Include selected untracked files
 CommittingPreferencePage_includeUntrackedFilesTooltip=Check selected untracked files by default
