--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -17,6 +17,7 @@
 #    Marc Khouzam <marc.khouzam@ericsson.com> - Add option not to checkout new branch from Gerrit
 #    Mickael Istria (Red Hat Inc.)            - 463339 Simple push wizard improvements
 #    Axel Richard <axel.richard@obeo.fr>      - handle symlink decorator in staging view
+#    Christian Georgi <christian.georgi@sap.com> - Check for empty second line is configurable
 ###############################################################################
 AbortRebaseCommand_CancelDialogMessage=The abort operation was canceled
 AbortRebaseCommand_JobName=Aborting Rebase
@@ -1019,6 +1020,7 @@ CommittingPreferencePage_title=Committing
 CommittingPreferencePage_formatting=Formatting
 CommittingPreferencePage_hardWrapMessage=Hard-wrap commit message
 CommittingPreferencePage_hardWrapMessageTooltip=Wrap text in commit message editor while typing
+CommittingPreferencePage_warnAboutCommitMessageSecondLine=Warn if second line of commit message is empty
 CommittingPreferencePage_footers=Footers
 CommittingPreferencePage_includeUntrackedFiles=Include selected untracked files
 CommittingPreferencePage_includeUntrackedFilesTooltip=Check selected untracked files by default
