--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -706,9 +706,11 @@ HistoryPreferencePage_MaxTagLength=&Maximum characters to show for a tag:
 HistoryPreferencePage_ShowGroupLabel=Show
 HistoryPreferencePage_ShowInRevCommentGroupLabel=Show in Revision Comment
 
+PullOperationUI_ConfigurationProblem=Verify that your repository configuration is correct and you have at least one remote configured to pull.
 PullOperationUI_ConnectionProblem=Git connection problem.\
 \n\nMaybe you are offline or behind a proxy.\nCheck your network connection and proxy configuration.
 PullOperationUI_NotTriedMessage=Not tried
+PullOperationUI_NothingToFetch=Verify that the remotes being pulled against are set up correctly and that they have the fetch configured.
 PullOperationUI_PullCanceledWindowTitle=Pull Canceled
 PullOperationUI_PullFailed=Pull Failed
 PullOperationUI_PullingMultipleTaskName=Pulling from Multiple Repositories
@@ -919,6 +921,8 @@ PushToGerritWizard_Title=Push the current HEAD to Gerrit
 FetchAction_wrongURITitle=Corrupted Configuration
 FetchAction_wrongURIMessage=Remote repositories URIs configuration is corrupted.
 FetchOperationUI_FetchJobName=Fetch from {0}
+FetchOperationUI_FetchFailed=Fetch Failed
+FetchOperationUI_NothingToFetch=Verify that the remotes being pulled against are set up correctly and that they have the fetch configured.
 
 FetchDestinationPage_PageTitle=Please select a fetch destination
 FetchDestinationPage_CouldNotGetBranchesMessage=Could not obtain tracking branches
