--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (C) 2015, Max Hohenegger <eclipse@hohenegger.eu> and others.
+# Copyright (C) 2015, Max Hohenegger <eclipse@hohenegger.eu>
 #
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
@@ -38,6 +38,7 @@ InitDialog_chooseBranchNamesAndPrefixes=Choose branch names and prefixes for you
 InitDialog_developBranch=Develop branch
 InitDialog_featureBranchPrefix=Feature branch prefix
 InitDialog_hotfixBranchPrefix=Hotfix branch prefix
+InitDialog_initializeRepository=Initialize repository
 InitDialog_invalidBranchName=Invalid branch name: ''{0}''
 InitDialog_invalidPrefix=Invalid prefix: ''{0}''
 InitDialog_masterBranch=Master branch
@@ -67,4 +68,4 @@ FinishFeatureDialog_setParameterForFinishing=Set options for finishing {0}.
 ReleaseFinishOperation_unexpectedConflictsReleaseAborted=Unexpected conflicts while merging to {0}. Finish release aborted.
 HotfixFinishOperation_unexpectedConflictsHotfixAborted=Unexpected conflicts while merging to {0}. Finish hotfix aborted.
 UIIcons_errorDeterminingIconBase=Can't determine icon base.
-UIIcons_errorLoadingPluginImage=Can''t load plugin image ''{0}''.
+UIIcons_errorLoadingPluginImage=Can't load plugin image ''{0}''.
